CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "DEBUG")
  #SET(CMAKE_BUILD_TYPE "RELEASE")
ENDIF()

FIND_PACKAGE(Boost 1.55.0)
IF(Boost_FOUND)
  SET(Boost_USE_STATIC_LIBS OFF)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME OFF)
  FIND_PACKAGE(Boost COMPONENTS system filesystem iostreams REQUIRED)

  ADD_EXECUTABLE(pipedb pipedb.cpp)
  TARGET_LINK_LIBRARIES(pipedb ${Boost_LIBRARIES})

  FILE(GLOB_RECURSE HEADERS *.hpp)
  INSTALL(FILES ${HEADERS} DESTINATION include)
  INSTALL(TARGETS pipedb DESTINATION bin)
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()

ADD_DEFINITIONS("-Wall")
ADD_DEFINITIONS("-std=c++11")

