CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(NOT CMAKE_BUILD_TYPE)
#  SET(CMAKE_BUILD_TYPE "DEBUG")
   SET(CMAKE_BUILD_TYPE "RELEASE")
ENDIF()

FIND_PACKAGE(Boost 1.50.0)
IF(Boost_FOUND)
  SET(Boost_USE_STATIC_LIBS ON)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME ON)
  FIND_PACKAGE(Boost COMPONENTS system filesystem iostreams REQUIRED)

  FILE(GLOB_RECURSE HEADERS *.hpp)
  INSTALL(FILES ${HEADERS} DESTINATION include)

  INCLUDE_DIRECTORIES(${INCLUDE_DIR})
  LINK_DIRECTORIES(${LIBRARY_DIR})

  ADD_LIBRARY(libCore SHARED core.cpp)
  ADD_LIBRARY(libCoreStatic STATIC core.cpp)

  target_link_libraries(libCore ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
  target_link_libraries(libCoreStatic ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
 
  SET_TARGET_PROPERTIES(libCoreStatic PROPERTIES OUTPUT_NAME libCore)

  ADD_DEFINITIONS("-Wall")
  ADD_DEFINITIONS("-std=c++11")
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()



