CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE "RELEASE")
ENDIF()

FIND_PACKAGE(Boost 1.50.0)
IF(Boost_FOUND)
  SET(Boost_USE_STATIC_LIBS OFF)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME OFF)
  FIND_PACKAGE(Boost COMPONENTS system filesystem iostreams REQUIRED)

  FILE(GLOB_RECURSE HEADERS *.hpp)
  INSTALL(FILES ${HEADERS} DESTINATION include)

  INCLUDE_DIRECTORIES(${INCLUDE_DIR})
  LINK_DIRECTORIES(${LIBRARY_DIR})

  ADD_LIBRARY(pipedb-core SHARED core.cpp)

  target_link_libraries(pipedb-core ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})

  ADD_DEFINITIONS("-fPIC")
  ADD_DEFINITIONS("-Wall")
  ADD_DEFINITIONS("-std=c++11")
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()
